# plugin_test

./: CMakeLists.txt  loader_description.xml  package.xml
include/plugin_test/: factory.hpp  loader_base.hpp  loader_derived.hpp  my_class.hpp  my_class_base.hpp  my_class_intermediate.hpp
src/: factory.cpp  loader_base.cpp  loader_derived.cpp  my_class.cpp  my_class_intermediate.cpp
test/: CMakeLists.txt  test_loader_plugin.cpp
