<?xml version="1.0"?>
<package format="3">
  <name>plugin_test</name>
  <version>0.0.0</version>
  <description>temp test package</description>

  <maintainer email="joseph.schornak@picknik.ai">Joe Schornak</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>s
  <depend>pluginlib</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

